// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info should render its children 1`] = `
<div
  className="u-p-1 infos--normal"
>
  <div
    className="infos--container"
  >
    <div
      className="infos--content"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`Info should render with a title 1`] = `
<div
  className="u-p-1 infos--normal"
>
  <div
    className="infos--container"
  >
    <div
      className="infos--content"
    >
      <SubTitle
        className="infos--title"
        ellipsis={false}
        tag="div"
      >
        title
      </SubTitle>
      Children
    </div>
  </div>
</div>
`;

exports[`Info should render with an icon 1`] = `
<div
  className="u-p-1 infos--normal"
>
  <div
    className="infos--container"
  >
    <Icon
      className="infos--icon"
      icon="openwith"
      spin={false}
    />
    <div
      className="infos--content u-pl-half"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`Info should render with the right variant 1`] = `
<div
  className="u-p-1 infos--error"
>
  <div
    className="infos--container"
  >
    <div
      className="infos--content"
    >
      Children
    </div>
  </div>
</div>
`;
